removed database url from file

--- a/NoteBooks/Mastery_project_final_AJ.ipynb
+++ b/NoteBooks/Mastery_project_final_AJ.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "executionInfo": {
      "elapsed": 3,
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "executionInfo": {
      "elapsed": 154747,
@@ -118,40 +118,6 @@
      "user_tz": -120
     },
     "id": "ZRp90WXln5WS"
-   },
-   "outputs": [],
-   "source": [
-    "# connect to the database and read in the tables\n",
-    "traveltide_url=\"postgresql://Test:bQNxVzJL4g6u@ep-noisy-flower-846766.us-east-2.aws.neon.tech/TravelTide\"\n",
-    "engine = sa.create_engine(traveltide_url)\n",
-    "connection = engine.connect().execution_options(isolation_level=\"AUTOCOMMIT\")\n",
-    "hotels = pd.read_sql(f\"SELECT * FROM hotels\", connection)\n",
-    "users = pd.read_sql(f\"SELECT * FROM users\", connection)\n",
-    "flights = pd.read_sql(f\"SELECT * FROM flights\", connection)\n",
-    "sessions = pd.read_sql(f\"SELECT * FROM sessions\", connection)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 617
-    },
-    "collapsed": true,
-    "executionInfo": {
-     "elapsed": 789,
-     "status": "ok",
-     "timestamp": 1746611619526,
-     "user": {
-      "displayName": "Julius Abongwa",
-      "userId": "12351214380900808212"
-     },
-     "user_tz": -120
-    },
-    "id": "IJxcyZxhpE15",
-    "outputId": "604f7662-0161-4196-e6ff-e70c8162a4bf"
    },
    "outputs": [
     {
@@ -175,146 +141,211 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>session_id</th>\n",
        "      <th>user_id</th>\n",
-       "      <th>trip_id</th>\n",
-       "      <th>session_start</th>\n",
-       "      <th>session_end</th>\n",
-       "      <th>flight_discount</th>\n",
-       "      <th>hotel_discount</th>\n",
-       "      <th>flight_discount_amount</th>\n",
-       "      <th>hotel_discount_amount</th>\n",
-       "      <th>flight_booked</th>\n",
-       "      <th>hotel_booked</th>\n",
-       "      <th>page_clicks</th>\n",
-       "      <th>cancellation</th>\n",
+       "      <th>num_clicks</th>\n",
+       "      <th>num_sessions</th>\n",
+       "      <th>avg_session_duration</th>\n",
+       "      <th>avg_bags</th>\n",
+       "      <th>age</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>married</th>\n",
+       "      <th>has_children</th>\n",
+       "      <th>home_country</th>\n",
+       "      <th>home_city</th>\n",
+       "      <th>home_airport</th>\n",
+       "      <th>num_trips</th>\n",
+       "      <th>num_flights</th>\n",
+       "      <th>money_spent_hotel</th>\n",
+       "      <th>time_after_booking</th>\n",
+       "      <th>avg_km_flown</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>145</th>\n",
-       "      <td>452612-001bb167fb0647f9a291dd2e8ad4814c</td>\n",
-       "      <td>452612</td>\n",
-       "      <td>None</td>\n",
-       "      <td>2023-03-24 11:02:00</td>\n",
-       "      <td>2023-03-24 11:02:45</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
+       "      <th>0</th>\n",
+       "      <td>23557</td>\n",
+       "      <td>82</td>\n",
+       "      <td>8</td>\n",
+       "      <td>76.625000</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>66</td>\n",
+       "      <td>F</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>usa</td>\n",
+       "      <td>new york</td>\n",
+       "      <td>LGA</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3670.5</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>6</td>\n",
-       "      <td>False</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>291</th>\n",
-       "      <td>459645-b5b882f6fc7041b6930773cf45f3f43d</td>\n",
-       "      <td>459645</td>\n",
-       "      <td>None</td>\n",
-       "      <td>2023-03-24 17:43:00</td>\n",
-       "      <td>2023-03-24 17:43:54</td>\n",
+       "      <th>1</th>\n",
+       "      <td>94883</td>\n",
+       "      <td>73</td>\n",
+       "      <td>8</td>\n",
+       "      <td>67.750000</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>52</td>\n",
+       "      <td>F</td>\n",
+       "      <td>True</td>\n",
        "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>7</td>\n",
-       "      <td>False</td>\n",
+       "      <td>usa</td>\n",
+       "      <td>kansas city</td>\n",
+       "      <td>MCI</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>130.0</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>1451.335404</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>358</th>\n",
-       "      <td>464160-03e284ce4a974f1f81e111bcaf7d9334</td>\n",
-       "      <td>464160</td>\n",
-       "      <td>None</td>\n",
-       "      <td>2023-03-24 17:08:00</td>\n",
-       "      <td>2023-03-24 17:08:25</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
+       "      <th>2</th>\n",
+       "      <td>101486</td>\n",
+       "      <td>131</td>\n",
+       "      <td>8</td>\n",
+       "      <td>122.250000</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>3</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>473</th>\n",
-       "      <td>468832-f5dd2ff46c34405388fbacf9e12a4852</td>\n",
-       "      <td>468832</td>\n",
-       "      <td>468832-bde0caf01f0a417a8e3aa3088eff2a9d</td>\n",
-       "      <td>2023-03-24 04:48:00</td>\n",
-       "      <td>2023-03-24 04:52:34</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>52</td>\n",
+       "      <td>F</td>\n",
        "      <td>True</td>\n",
        "      <td>True</td>\n",
-       "      <td>38</td>\n",
-       "      <td>False</td>\n",
+       "      <td>usa</td>\n",
+       "      <td>tacoma</td>\n",
+       "      <td>TCM</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2199.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>995.681600</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>522</th>\n",
-       "      <td>471649-6bf40771cd3e475585de41437544923b</td>\n",
-       "      <td>471649</td>\n",
-       "      <td>None</td>\n",
-       "      <td>2023-03-24 21:15:00</td>\n",
-       "      <td>2023-03-24 21:16:47</td>\n",
+       "      <th>3</th>\n",
+       "      <td>101961</td>\n",
+       "      <td>126</td>\n",
+       "      <td>8</td>\n",
+       "      <td>117.750000</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>44</td>\n",
+       "      <td>F</td>\n",
+       "      <td>True</td>\n",
        "      <td>False</td>\n",
-       "      <td>False</td>\n",
+       "      <td>usa</td>\n",
+       "      <td>boston</td>\n",
+       "      <td>BOS</td>\n",
+       "      <td>5</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2429.0</td>\n",
+       "      <td>5.6</td>\n",
+       "      <td>1366.569097</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>106907</td>\n",
+       "      <td>240</td>\n",
+       "      <td>8</td>\n",
+       "      <td>758.915066</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>46</td>\n",
+       "      <td>F</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>usa</td>\n",
+       "      <td>miami</td>\n",
+       "      <td>TNT</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>14</td>\n",
-       "      <td>False</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                  session_id  user_id  \\\n",
-       "145  452612-001bb167fb0647f9a291dd2e8ad4814c   452612   \n",
-       "291  459645-b5b882f6fc7041b6930773cf45f3f43d   459645   \n",
-       "358  464160-03e284ce4a974f1f81e111bcaf7d9334   464160   \n",
-       "473  468832-f5dd2ff46c34405388fbacf9e12a4852   468832   \n",
-       "522  471649-6bf40771cd3e475585de41437544923b   471649   \n",
+       "   user_id  num_clicks  num_sessions  avg_session_duration  avg_bags  age  \\\n",
+       "0    23557          82             8             76.625000       0.0   66   \n",
+       "1    94883          73             8             67.750000       0.5   52   \n",
+       "2   101486         131             8            122.250000       0.0   52   \n",
+       "3   101961         126             8            117.750000       0.4   44   \n",
+       "4   106907         240             8            758.915066       5.0   46   \n",
        "\n",
-       "                                     trip_id       session_start  \\\n",
-       "145                                     None 2023-03-24 11:02:00   \n",
-       "291                                     None 2023-03-24 17:43:00   \n",
-       "358                                     None 2023-03-24 17:08:00   \n",
-       "473  468832-bde0caf01f0a417a8e3aa3088eff2a9d 2023-03-24 04:48:00   \n",
-       "522                                     None 2023-03-24 21:15:00   \n",
+       "  gender  married  has_children home_country    home_city home_airport  \\\n",
+       "0      F     True         False          usa     new york          LGA   \n",
+       "1      F     True         False          usa  kansas city          MCI   \n",
+       "2      F     True          True          usa       tacoma          TCM   \n",
+       "3      F     True         False          usa       boston          BOS   \n",
+       "4      F     True          True          usa        miami          TNT   \n",
        "\n",
-       "            session_end  flight_discount  hotel_discount  \\\n",
-       "145 2023-03-24 11:02:45            False           False   \n",
-       "291 2023-03-24 17:43:54            False           False   \n",
-       "358 2023-03-24 17:08:25            False           False   \n",
-       "473 2023-03-24 04:52:34            False           False   \n",
-       "522 2023-03-24 21:16:47            False           False   \n",
-       "\n",
-       "     flight_discount_amount  hotel_discount_amount  flight_booked  \\\n",
-       "145                     0.0                    0.0          False   \n",
-       "291                     0.0                    0.0          False   \n",
-       "358                     0.0                    0.0          False   \n",
-       "473                     0.0                    0.0           True   \n",
-       "522                     0.0                    0.0          False   \n",
-       "\n",
-       "     hotel_booked  page_clicks  cancellation  \n",
-       "145         False            6         False  \n",
-       "291         False            7         False  \n",
-       "358         False            3         False  \n",
-       "473          True           38         False  \n",
-       "522         False           14         False  "
+       "   num_trips  num_flights  money_spent_hotel  time_after_booking  avg_km_flown  \n",
+       "0          2            0             3670.5                 0.0      0.000000  \n",
+       "1          2            4              130.0                 6.5   1451.335404  \n",
+       "2          2            2             2199.0                 9.0    995.681600  \n",
+       "3          5           10             2429.0                 5.6   1366.569097  \n",
+       "4          0            0                0.0                 0.0      0.000000  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# connect to the database and read in the tables My school does not allow me \n",
+    "traveltide_url=\"\"\n",
+    "engine = sa.create_engine(traveltide_url)\n",
+    "connection = engine.connect().execution_options(isolation_level=\"AUTOCOMMIT\")\n",
+    "hotels = pd.read_sql(f\"SELECT * FROM hotels\", connection)\n",
+    "users = pd.read_sql(f\"SELECT * FROM users\", connection)\n",
+    "flights = pd.read_sql(f\"SELECT * FROM flights\", connection)\n",
+    "sessions = pd.read_sql(f\"SELECT * FROM sessions\", connection)\n",
+    "\n",
+    "sessions = pd.read_csv('../Data/customers.csv')\n",
+    "\n",
+    "sessions.head()\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 617
+    },
+    "collapsed": true,
+    "executionInfo": {
+     "elapsed": 789,
+     "status": "ok",
+     "timestamp": 1746611619526,
+     "user": {
+      "displayName": "Julius Abongwa",
+      "userId": "12351214380900808212"
+     },
+     "user_tz": -120
+    },
+    "id": "IJxcyZxhpE15",
+    "outputId": "604f7662-0161-4196-e6ff-e70c8162a4bf"
+   },
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "\"None of [Index(['flight_discount_amount', 'hotel_discount_amount'], dtype='object')] are in the [columns]\"",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[9]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Fill missing values in [\"flight_discount_amount\",\"hotel_discount_amount\"] with 0\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m sessions[[\u001b[33m\"\u001b[39m\u001b[33mflight_discount_amount\u001b[39m\u001b[33m\"\u001b[39m,\u001b[33m\"\u001b[39m\u001b[33mhotel_discount_amount\u001b[39m\u001b[33m\"\u001b[39m]] = sessions[[\u001b[33m\"\u001b[39m\u001b[33mflight_discount_amount\u001b[39m\u001b[33m\"\u001b[39m,\u001b[33m\"\u001b[39m\u001b[33mhotel_discount_amount\u001b[39m\u001b[33m\"\u001b[39m]].fillna(\u001b[32m0\u001b[39m)\n\u001b[32m      4\u001b[39m \u001b[38;5;66;03m# Filter the sessions data with the session_start column to start at '2023-01-04'\u001b[39;00m\n\u001b[32m      5\u001b[39m sessions[\u001b[33m'\u001b[39m\u001b[33msession_start\u001b[39m\u001b[33m'\u001b[39m] = pd.to_datetime(sessions[\u001b[33m'\u001b[39m\u001b[33msession_start\u001b[39m\u001b[33m'\u001b[39m])\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/opt/anaconda3/envs/master_project/lib/python3.11/site-packages/pandas/core/frame.py:4108\u001b[39m, in \u001b[36mDataFrame.__getitem__\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   4106\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m is_iterator(key):\n\u001b[32m   4107\u001b[39m         key = \u001b[38;5;28mlist\u001b[39m(key)\n\u001b[32m-> \u001b[39m\u001b[32m4108\u001b[39m     indexer = \u001b[38;5;28mself\u001b[39m.columns._get_indexer_strict(key, \u001b[33m\"\u001b[39m\u001b[33mcolumns\u001b[39m\u001b[33m\"\u001b[39m)[\u001b[32m1\u001b[39m]\n\u001b[32m   4110\u001b[39m \u001b[38;5;66;03m# take() does not accept boolean indexers\u001b[39;00m\n\u001b[32m   4111\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mgetattr\u001b[39m(indexer, \u001b[33m\"\u001b[39m\u001b[33mdtype\u001b[39m\u001b[33m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m) == \u001b[38;5;28mbool\u001b[39m:\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/opt/anaconda3/envs/master_project/lib/python3.11/site-packages/pandas/core/indexes/base.py:6200\u001b[39m, in \u001b[36mIndex._get_indexer_strict\u001b[39m\u001b[34m(self, key, axis_name)\u001b[39m\n\u001b[32m   6197\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m   6198\u001b[39m     keyarr, indexer, new_indexer = \u001b[38;5;28mself\u001b[39m._reindex_non_unique(keyarr)\n\u001b[32m-> \u001b[39m\u001b[32m6200\u001b[39m \u001b[38;5;28mself\u001b[39m._raise_if_missing(keyarr, indexer, axis_name)\n\u001b[32m   6202\u001b[39m keyarr = \u001b[38;5;28mself\u001b[39m.take(indexer)\n\u001b[32m   6203\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(key, Index):\n\u001b[32m   6204\u001b[39m     \u001b[38;5;66;03m# GH 42790 - Preserve name from an Index\u001b[39;00m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/opt/anaconda3/envs/master_project/lib/python3.11/site-packages/pandas/core/indexes/base.py:6249\u001b[39m, in \u001b[36mIndex._raise_if_missing\u001b[39m\u001b[34m(self, key, indexer, axis_name)\u001b[39m\n\u001b[32m   6247\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m nmissing:\n\u001b[32m   6248\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m nmissing == \u001b[38;5;28mlen\u001b[39m(indexer):\n\u001b[32m-> \u001b[39m\u001b[32m6249\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mNone of [\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mkey\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m] are in the [\u001b[39m\u001b[38;5;132;01m{\u001b[39;00maxis_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m]\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m   6251\u001b[39m     not_found = \u001b[38;5;28mlist\u001b[39m(ensure_index(key)[missing_mask.nonzero()[\u001b[32m0\u001b[39m]].unique())\n\u001b[32m   6252\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnot_found\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m not in index\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mKeyError\u001b[39m: \"None of [Index(['flight_discount_amount', 'hotel_discount_amount'], dtype='object')] are in the [columns]\""
+     ]
     }
    ],
    "source": [
